Checking in menu alignment fix

--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -25,6 +25,10 @@ body {
   font-weight: bold;
 }
 
+#nav-list span {
+  width: 100%;
+}
+
 #nav-list li {
   border: 1px solid black
 }
